src/preprocessorParser.java
// Generated from preprocessor.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class preprocessorParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		THREEDOLLAR=1, TWODOLLAR=2, DOLLAR=3, TOKEN=4;
	public static final String[] tokenNames = {
		"<INVALID>", "'$$$'", "'$$'", "'$'", "TOKEN"
	};
	public static final int
		RULE_lol = 0, RULE_parse = 1;
	public static final String[] ruleNames = {
		"lol", "parse"
	};

	@Override
	public String getGrammarFileName() { return "preprocessor.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public preprocessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LolContext extends ParserRuleContext {
		public LolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof preprocessorListener ) ((preprocessorListener)listener).enterLol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof preprocessorListener ) ((preprocessorListener)listener).exitLol(this);
		}
	}

	public final LolContext lol() throws RecognitionException {
		LolContext _localctx = new LolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseContext extends ParserRuleContext {
		public String result;
		public Token TOKEN;
		public List<TerminalNode> DOLLAR() { return getTokens(preprocessorParser.DOLLAR); }
		public List<TerminalNode> THREEDOLLAR() { return getTokens(preprocessorParser.THREEDOLLAR); }
		public TerminalNode TOKEN(int i) {
			return getToken(preprocessorParser.TOKEN, i);
		}
		public TerminalNode TWODOLLAR(int i) {
			return getToken(preprocessorParser.TWODOLLAR, i);
		}
		public TerminalNode THREEDOLLAR(int i) {
			return getToken(preprocessorParser.THREEDOLLAR, i);
		}
		public List<TerminalNode> TWODOLLAR() { return getTokens(preprocessorParser.TWODOLLAR); }
		public List<TerminalNode> TOKEN() { return getTokens(preprocessorParser.TOKEN); }
		public TerminalNode DOLLAR(int i) {
			return getToken(preprocessorParser.DOLLAR, i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof preprocessorListener ) ((preprocessorListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof preprocessorListener ) ((preprocessorListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parse);
		StringBuilder sb = new StringBuilder(); 
		                                    StringBuilder buffer = new StringBuilder();
		                                    String header = null;
		                                    boolean mode = false;
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << THREEDOLLAR) | (1L << TWODOLLAR) | (1L << DOLLAR) | (1L << TOKEN))) != 0)) {
				{
				setState(14);
				switch (_input.LA(1)) {
				case DOLLAR:
					{
					setState(6); match(DOLLAR);

					             if (mode) 
					             {
					                sb.append(ExpTex.transform(buffer.toString(), header));
					                buffer = new StringBuilder();
					                mode = false;
					                } else
					             {  mode = true; header = "$";}
					             
					}
					break;
				case TWODOLLAR:
					{
					setState(8); match(TWODOLLAR);
					if (mode) 
					             {
					                sb.append(ExpTex.transform(buffer.toString(), header));
					                buffer = new StringBuilder();
					                mode = false;
					                } else
					             {  mode = true; header = "$$";}
					             
					}
					break;
				case THREEDOLLAR:
					{
					setState(10); match(THREEDOLLAR);
					if (mode) buffer.append("$"); else sb.append("$");
					}
					break;
				case TOKEN:
					{
					setState(12); ((ParseContext)_localctx).TOKEN = match(TOKEN);
					if(mode) buffer.append((((ParseContext)_localctx).TOKEN!=null?((ParseContext)_localctx).TOKEN.getText():null)); else sb.append((((ParseContext)_localctx).TOKEN!=null?((ParseContext)_localctx).TOKEN.getText():null));
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(18);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((ParseContext)_localctx).result =  sb.toString(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}